# AutoChecklist

./: .env.example  .gitignore  LICENSE  README.md  README.pypi.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  port-contributions.yml  publish.yml  test.yml
autochecklist/: CLAUDE.md  __init__.py  cli.py  config.py  models.py  pipeline.py  registry.py
autochecklist/generators/: __init__.py  base.py
autochecklist/generators/corpus_level/: __init__.py  deductive.py  (+2 more)
autochecklist/prompts/: README.md  __init__.py
autochecklist/providers/: __init__.py  base.py  factory.py  http_client.py  vllm_offline.py
autochecklist/refiners/: __init__.py  base.py  deduplicator.py  selector.py  tagger.py  unit_tester.py
autochecklist/scorers/: __init__.py  base.py
autochecklist/utils/: __init__.py  embeddings.py  io.py  parsing.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cli.md  custom-prompts.md  generators.md  pipeline.md  providers.md  refiners.md  scorers.md  supported-pipelines.md
examples/: checklist.json  corpus_level_demo.ipynb  custom_components_tutorial.ipynb  evaluation_results.jsonl  instance_level_demo.ipynb  my_generator.md  my_scorer.md  pipeline_demo.ipynb
scripts/: release.sh  vllm_server.sh
tests/: CLAUDE.md  README.md  __init__.py  conftest.py  test_cli.py  test_pipeline.py  test_pipeline_batch.py  test_pipeline_progress.py  test_prompts.py  test_reasoning_effort.py  test_registry.py  test_registry_pipeline.py
tests/test_custom/: test_custom.py
tests/test_generators/: __init__.py  test_contrastive_provider.py  test_direct.py  test_integration.py  test_openrubrics_integration.py
tests/test_models/: test_checklist_by_category.py  test_core_models.py  test_grouped_score.py  test_pipeline_grouped.py
tests/test_providers/: conftest.py  test_http_client.py  test_provider_config.py  test_provider_threading.py  test_responses_api.py  test_structured_output.py  test_vllm_offline.py
tests/test_refiners/: __init__.py  test_deduplicator.py  test_integration.py  test_selector.py  test_tagger.py  test_unit_tester.py
tests/test_scorers/: __init__.py  test_item.py  test_normalized.py  test_unified_scorer.py
ui/: README.md  launch_ui.sh
ui/backend/: pyproject.toml
ui/backend/app/: __init__.py  main.py  schemas.py
ui/backend/app/routers/: batch.py  checklist_builder.py  checklists.py  evaluate.py  pipelines.py  prompt_templates.py  registry_info.py  settings.py
ui/backend/app/services/: batch_runner.py  checklist.py  settings_service.py  storage.py
ui/backend/tests/: README.md  conftest.py  test_batch.py  test_checklists.py  test_evaluate.py  test_prompt_templates.py  test_registry_api.py  test_settings.py  test_settings_api.py  test_storage.py
ui/frontend/: README.md  next.config.ts  package-lock.json  package.json
(+83 files in other folders)
